# sfora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  legacy_experiments.md  library_usage.md  results.md
hf/: README.md
reports/: REPORT.md
reports/archive/: image_retrieval_cars.bounded100_normtrain.remote.json  image_retrieval_cars.debug20.remote.json  image_retrieval_cars.full.remote.json  image_retrieval_cars.group_supcon.focused.remote.json  image_retrieval_cars.group_supcon.remote.json  image_retrieval_cars.pre_normtrain.remote.json  image_retrieval_cars.strong.remote.json  image_retrieval_cars.validation.remote.json  image_retrieval_cub.bounded100_normtrain.remote.json  image_retrieval_cub.debug20.remote.json  (+21 more)
scripts/: crossteacher.sh  crossteacher_students.sh  ensemble_eval.py  explore_trainclean_projection.py  make_projection.py  make_thumbnails.py  overnight.sh  run_remote.sh  run_remote_ablation.sh  run_remote_baseline.sh  run_remote_cars_panels.sh  run_remote_cars_reseed.sh  run_remote_carstune.sh  run_remote_carstune2.sh  run_remote_carstune3.sh  run_remote_carstune_hist.sh  run_remote_confirm.sh  run_remote_full_imdb.sh  run_remote_fusion.sh  run_remote_gsi_stage1.sh  run_remote_gsi_stage2.sh  run_remote_hist_varfloor.sh  run_remote_image_benchmarks.sh  run_remote_image_end_to_end.sh  run_remote_models.sh  run_remote_paema.sh  run_remote_sop.sh  run_remote_sop_baselines.sh  sop.sh  sop_fix.sh  sop_herd_after.sh  sop_tune.sh  train_fit_fold.py  train_fit_gpa.py  universality.sh
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
tests/: test_ablation.py  test_api.py  test_benchmark.py  test_cli.py  test_compose.py  test_data.py  test_encoder_ablation.py  test_encoder_training.py  test_evaluation.py  test_experiments.py  test_image_benchmark.py  test_image_end_to_end.py  test_losses.py  test_method.py  test_objective_loss_registry.py  test_publication.py  test_remote.py  test_report.py  test_text_baselines.py  test_training.py  test_workflows.py
(+68 files in other folders)
