[project]
name = "sfora"
version = "0.2.0"
description = "SFORA: deep metric learning. HERD (Hypergraph EMA-teacher Relational Distillation) + a multi-model ensemble reach CUB-200 R@1 74.68, beating reported same-arch SOTA."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Roman Bartusiak" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0",
  "pydantic>=2.8",
  "rich>=13.7",
  "scikit-learn>=1.5",
  "typer>=0.12",
]

[project.optional-dependencies]
research = [
  "accelerate>=1.0",
  "datasets>=3.0",
  "evaluate>=0.4",
  "huggingface-hub>=0.34",
  "ipython>=8.26",
  "jupyterlab>=4.2",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "sentence-transformers>=3.0",
  "torch>=2.4",
  "torchvision>=0.19",
  "transformers>=4.44",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.8",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
sfora = "sfora.cli:app"

[project.urls]
Homepage = "https://github.com/CausalityHQ/sfora"
Repository = "https://github.com/CausalityHQ/sfora"
Issues = "https://github.com/CausalityHQ/sfora/issues"
Changelog = "https://github.com/CausalityHQ/sfora/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfora"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["datasets", "sentence_transformers", "sklearn.*", "torch", "torchvision", "torchvision.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
